# stackify

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
stackgen/cli/: commands.py  main.py
stackgen/core/: generator.py
stackgen/templates/airflow/: dag.py.j2
stackgen/templates/base/: README.md.j2  config.yaml.j2  requirements.txt.j2
stackgen/templates/docker/: docker-compose.yml.j2
stackgen/templates/kafka/: producer.py.j2
stackgen/templates/spark/: batch_job.py.j2  streaming_job.py.j2
stackify/cli/: commands.py  main.py
stackify/core/: generator.py  template_engine.py
stackify/templates/base/: README.md.j2
