[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stackgen" = ["templates/**/*"]

[project]
name = "stackgen"
version = "0.1.2"
description = "CLI tool to bootstrap data engineering projects"
authors = [
    { name = "Minhaz Alam" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typer",
    "questionary",
    "jinja2",
]

[project.scripts]
stackgen = "stackgen.cli.main:app"