[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stackgen" = ["templates/**/*"]

[project]
name = "stackgen"
version = "0.1.5"
description = "CLI tool to bootstrap data engineering projects"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Minhaz Alam", email = "minhazalam365@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
    "typer",
    "questionary",
    "jinja2",
]

[project.scripts]
stackgen = "stackgen.cli.main:app"