[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stackgen" = ["templates/**/*"]

[project]
name = "stackgen"
version = "0.1.6"
description = "CLI tool to bootstrap data engineering projects"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

authors = [
    { name = "Minhaz Alam", email = "minhazalam365@gmail.com" }
]

license = { file = "LICENSE" }

keywords = ["data-engineering", "cli", "spark", "kafka", "airflow"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer",
    "questionary",
    "jinja2",
]

[project.scripts]
stackgen = "stackgen.cli.main:app"